Closed Bug 1803303 Opened 3 years ago Closed 3 years ago

Input range with a @list/<datalist> displays tick marks that are step mismatches

Categories

(Core :: Layout: Form Controls, defect)

Firefox 109
defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox109 --- fixed

People

(Reporter: zrhoffman, Assigned: zrhoffman)

References

(Blocks 1 open bug)

Details

Attachments

(3 files, 1 obsolete file)

Attached file Testcase #1

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:109.0) Gecko/20100101 Firefox/109.0

Steps to reproduce:

See "step mismatches testcase.html" or the below data URI.

data:text/html,<input type=range step=3 value=1 min=-5 max=5 list=my-list onchange=document.querySelector('\x23range-value').value=value><input id=range-value value=2><datalist id=my-list><option value=-4 label=low><option value=-2><option value=0><option value=2><option value=4 label=high></datalist>

Actual results:

The reachable and unreachable tick marks show are displayed

Expected results:

Only tick marks that are valid step matches from the input range's minimum value should be displayed.

Severity: -- → S3
Assignee: nobody → zach
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #9306115 - Attachment description: WIP: Bug 1803303 - Do not display input range tick marks that are step mismatches → Bug 1803303 - Do not display input range tick marks that are step mismatches r=emilio
Attachment #9306120 - Attachment is obsolete: true
Attachment #9306115 - Attachment description: Bug 1803303 - Do not display input range tick marks that are step mismatches r=emilio → Bug 1803303 - Do not display input range tick marks that are step mismatches r?emilio
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/46f2de24e674 Do not display input range tick marks that are step mismatches r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/37297 for changes under testing/web-platform/tests
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/08bfae421d1b Make HTMLInputElement::ValueIsStepMismatch() parameter constant r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Upstream PR merged by moz-wptsync-bot
QA Whiteboard: qa-109b-p2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: