Bug 1803303 - Do not display input range tick marks that are step mismatches r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D163521