dom/html/input/InputType.h
@@ -141,14 +141,6 @@ class InputType {
   SetValueInternal(const nsAString& aValue, const ValueSetterOptions& aOptions);
 
   /**
-   * Return the base used to compute if a value matches step.
-   * Basically, it's the min attribute if present and a default value otherwise.
-   *
-   * @return The step base.
-   */
-  Decimal GetStepBase() const;
-
-  /**
    * Get the primary frame for the input element.
    */
   nsIFrame* GetPrimaryFrame() const;
